Attempted bug fix on autoplaying video on mobile.

--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ body {
 
 video {
 	width: 100%;
+	display: inline-block;
 }
 
 #container {
